--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +10,6 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <title>Restaurant Info</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script>
-  $(document).ready(function(){
-    $("p:nth-of-type(3)").css("background-color", "#f58500");
-    $("p:nth-of-type(3)").css("width", "12%");
-    $("p:nth-of-type(3)").css("padding", "5px 10px");
-    $("p:nth-of-type(3)").css("border-radius", "5%");
-    $("p:nth-of-type(3)").css("color", "#fff");
-    $("p:nth-of-type(3)").css("text-transform", "uppercase");
-  });
-  </script>
 </head>
 
 <body class="inside">
@@ -45,9 +35,10 @@
       <div id="map"></div>
     </section>
     <!-- End map -->
+    <div style="padding-top:200px;">
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
@@ -58,10 +49,11 @@
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
+  </div>
     <!-- End reviews -->
   </main>
   <!-- End main -->
-
+   
   <!-- Beginning footer -->
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
